--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,15 +12,15 @@
     </div>
     <div class="container">
         <div class="box-a">
-            <h2>Chicken</h2>
+            <h2>Chicken&nbsp;</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores commodi qui natus laudantium dicta voluptates beatae excepturi ratione ipsa, facere at harum sequi amet debitis quo assumenda, eligendi nesciunt.</p>
         </div>
         <div class="box-b">
-            <h2>Beef</h2>
+            <h2>Beef&nbsp;</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores commodi qui natus laudantium dicta voluptates beatae excepturi ratione ipsa, facere at harum sequi amet debitis quo assumenda, eligendi nesciunt.</p>
         </div>
         <div class="box-c">
-            <h2>Sushi</h2>
+            <h2>Sushi&nbsp;</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti maiores commodi qui natus laudantium dicta voluptates beatae excepturi ratione ipsa, facere at harum sequi amet debitis quo assumenda, eligendi nesciunt.</p>
         </div>
     </div>  
